apps/cod-zombies-pap-checklist/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cod-zombies-pap-checklist
  namespace: cod-zombies-pap-checklist
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cod-zombies-pap-checklist
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cod-zombies-pap-checklist
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: cod-zombies-pap-checklist
          image: ghcr.io/jvz-devx/cod-zombies-pap-checklist:main # {"$imagepolicy": "flux-system:cod-zombies-pap-checklist"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
