apps/cod-zombies-pap-checklist/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cod-zombies-pap-checklist
  namespace: cod-zombies-pap-checklist
spec:
  selector:
    app.kubernetes.io/name: cod-zombies-pap-checklist
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
